Modified fonts for page.

--- a/tikzpgfplotsgenerator.html
+++ b/tikzpgfplotsgenerator.html
@@ -81,6 +81,11 @@
 
 <h2>Final Output</h2>
 <div>
+<p>Some preamble output</p>
+    <textarea name="output" rows="10" cols="72" readonly data-bind="value: preambleOutput"></textarea>
+</div>
+<div>
+    <p>Plot output</p>
     <textarea name="output" rows="20" cols="72" readonly data-bind="value: output"></textarea>
 </div>
 
