--- a/tikzpgfplotsgenerator.html
+++ b/tikzpgfplotsgenerator.html
@@ -20,74 +20,105 @@
 
 <p> This is a generator of basic tikz pgfplots.   </p>
 
-<h2>Add Axis</h2>
-<button data-bind="click: addAxis">Add New Axis</button>
-<div data-bind="foreach: axes">
-<div>
-    <label>X Label</label> <input data-bind="textInput: xLabel" type="text"> </input>
-    <label>Y Label</label> <input data-bind="textInput: yLabel" type="text"> </input>
-</div>
+<div id="left-column">
 
-    <div>
-        <label data-bind="attr:{for: 'axis-grid-' + $index()}">Include Grid?</label>  
-        <input type="checkbox" data-bind="checked: allGrid, attr: {id: 'axis-grid-' + $index()}">  </input>
-    </div>
-    <div>
-        <label  data-bind="attr:{for: 'axis-ticks' + $index()}">Hide all ticks?</label> 
-        <input type="checkbox" data-bind="checked: hideAllTicks, attr:{id: 'axis-ticks' + $index()}">  </input>
-    </div>
-    <div>
-        <label data-bind="attr:{for: 'set-axis-limits' + $index()}">Set Axis Limits</label>
-        <input type="checkbox" data-bind="checked: setAxisLimits, attr:{id: 'set-axis-limits' + $index()}"></input>
-
-        <div data-bind="visible: setAxisLimits">
-            <label>X Min</label> <input type="search" data-bind="textInput: xMin" >
-            <label>X Max</label> <input type="search" data-bind="textInput: xMax" >
-            <label>Y Min</label> <input type="search" data-bind="textInput: yMin" >
-            <label>Y Max</label> <input type="search" data-bind="textInput: yMax" >
+    <h2>Add Axis</h2>
+    <button data-bind="click: addAxis">Add New Axis</button>
+    <div data-bind="foreach: axes">
+        <div>
+            <label>X Label</label> <input data-bind="textInput: xLabel" type="text"> </input>
+            <label>Y Label</label> <input data-bind="textInput: yLabel" type="text"> </input>
         </div>
 
-    </div>
-    <h3> Label Styles </h3>
+        <div>
+            <label data-bind="attr:{for: 'axis-grid-' + $index()}">Include Grid?</label>  
+            <input type="checkbox" data-bind="checked: allGrid, attr: {id: 'axis-grid-' + $index()}">  </input>
+        </div>
+        <div>
+            <label  data-bind="attr:{for: 'axis-ticks' + $index()}">Hide all ticks?</label> 
+            <input type="checkbox" data-bind="checked: hideAllTicks, attr:{id: 'axis-ticks' + $index()}">  </input>
+        </div>
+        <div>
+            <label data-bind="attr:{for: 'set-axis-limits' + $index()}">Set Axis Limits</label>
+            <input type="checkbox" data-bind="checked: setAxisLimits, attr:{id: 'set-axis-limits' + $index()}"></input>
 
-    <div> 
-        <label data-bind="attr:{for: 'axis-label-pos' + $index()}">Set position on the axis in axis coordinates </label> <input type="checkbox" data-bind="checked: styleXLabel, attr:{id: 'axis-label-pos' + $index()}"> </input>
-    </div>
-    <div data-bind="visible: styleXLabel">
-        <label>x label x-position</label><input type="search" data-bind="textInput: xLabelXLocation"> 
-        <label>x label y-position</label> </input><input type="search" data-bind="textInput: xLabelYLocation"></input>
+            <div data-bind="visible: setAxisLimits">
+                <label>X Min</label> <input type="search" data-bind="textInput: xMin" >
+                <label>X Max</label> <input type="search" data-bind="textInput: xMax" >
+                <label>Y Min</label> <input type="search" data-bind="textInput: yMin" >
+                <label>Y Max</label> <input type="search" data-bind="textInput: yMax" >
+            </div>
+
+        </div>
+
+        <h3>Legend Options</h3>
+        <div>
+            <label data-bind="attr:{for: 'show-legend'+$index()}">Show Legend?</label> <input type="checkbox" data-bind="attr:{id: 'show-legend'+$index()}, checked: showLegend"></input>
+        </div>
+        <div data-bind="visible: showLegend">
+            <div>
+                <input data-bind="attr:{name: 'legend-pos-radio'+$index(), id: 'legend-pos-radio-shorthand'+$index()}, checked: legendPosType" value="shorthand" type="radio"></input> <label>Use shorthand legend position</label>
+            </div>
+            <div> <select data-bind="options: legendPosOptions, visible: showLegend() && legendPosType() === 'shorthand', value: shorthandLegendPos"></select> </div>
+
+            <div>
+                <input data-bind="attr:{name: 'legend-pos-radio'+$index(), id: 'legend-pos-radio-custom'+$index()}, checked: legendPosType" value="custom" type="radio"></input> <label>Specify exact legend position</label>       
+            </div>
+            <div data-bind="visible: showLegend() && legendPosType() === 'custom'">
+                <p>Legend position (use axis coordinates 0-1)</p>
+                <div><label>Legend X Pos</label> <input type="text" data-bind="textInput: legendXCustomPos"></input></div>
+                <div><label>Legend Y Pos</label> <input type="text" data-bind="textInput: legendYCustomPos"></input></div>
+                <div><label>Anchor</label> <select data-bind="options: anchorOptions, value: legendAnchor"> </select></div>
+            </div>
+
+        </div>
+
+        <h3> Label Styles </h3>
+
+        <div> 
+            <label data-bind="attr:{for: 'axis-label-pos' + $index()}">Set position on the axis in axis coordinates </label> <input type="checkbox" data-bind="checked: styleXLabel, attr:{id: 'axis-label-pos' + $index()}"> </input>
+        </div>
+        <div data-bind="visible: styleXLabel">
+            <label>x label x-position</label><input type="search" data-bind="textInput: xLabelXLocation"> 
+            <label>x label y-position</label> </input><input type="search" data-bind="textInput: xLabelYLocation"></input>
+        </div>
+
+        <div> 
+            <label data-bind="attr:{for: 'rotate-y-axis' + $index()}">Rotate Y-Axis Label?</label> <input type="checkbox" data-bind="checked: rotateYAxis, attr:{id: 'rotate-y-axis' + $index()}"> </input> 
+            <label data-bind="visible: rotateYAxis">Rotation angle:</label> <input type="text" data-bind="visible: rotateYAxis,  textInput: rotateYAxisAngle" ></input>
+        </div>
+
+        <div>
+            <label for="use-non-box-axis-lines">Use non box axis?</label><input id="use-non-box-axis-lines" type="checkbox" data-bind="checked: useNonBoxAxis">
+            <select data-bind="visible: useNonBoxAxis, options: lineSettingOptions, value: axisLineSetting"> </select>
+        </div>
+
+        <h2>Add Series</h2> 
+        <button data-bind="click: addTableSeries">Add a Series From a File</button><button style="margin-left: 2em" data-bind="click: addMathSeries">Add a Series from Math Function</button>
+        <div data-bind=" template: { foreach: plots, name: seriesTemplateName } ">
+        </div>
+
+
+
     </div>
 
-    <div> 
-        <label data-bind="attr:{for: 'rotate-y-axis' + $index()}">Rotate Y-Axis Label?</label> <input type="checkbox" data-bind="checked: rotateYAxis, attr:{id: 'rotate-y-axis' + $index()}"> </input> 
-        <label data-bind="visible: rotateYAxis">Rotation angle:</label> <input type="text" data-bind="visible: rotateYAxis,  textInput: rotateYAxisAngle" ></input>
-    </div>
 
+</div>
+
+
+<div id="right-column">
+    <h2>Final Output</h2>
     <div>
-        <label for="use-non-box-axis-lines">Use non box axis?</label><input id="use-non-box-axis-lines" type="checkbox" data-bind="checked: useNonBoxAxis">
-        <select data-bind="visible: useNonBoxAxis, options: lineSettingOptions, value: axisLineSetting"> </select>
+        <p>Some preamble output</p>
+        <textarea name="output" rows="10" cols="72" readonly data-bind="value: preambleOutput"></textarea>
+    </div>
+    <div>
+        <p>Plot output</p>
+        <textarea name="output" rows="20" cols="72" readonly data-bind="value: output"></textarea>
     </div>
 
-    <h2>Add Series</h2> 
-    <button data-bind="click: addTableSeries">Add a Series From a File</button><button style="margin-left: 2em" data-bind="click: addMathSeries">Add a Series from Math Function</button>
-    <div data-bind=" template: { foreach: plots, name: seriesTemplateName } ">
-    </div>
-
-
-
 </div>
 
-
-
-<h2>Final Output</h2>
-<div>
-<p>Some preamble output</p>
-    <textarea name="output" rows="10" cols="72" readonly data-bind="value: preambleOutput"></textarea>
-</div>
-<div>
-    <p>Plot output</p>
-    <textarea name="output" rows="20" cols="72" readonly data-bind="value: output"></textarea>
-</div>
 
 </body>
 
@@ -114,7 +145,7 @@
 
 <script type="text/html" id="table" >
 <div data-bind="template:{name:'base-plot-options'}">
-    
+
 </div>
 <div>
 <p>Select the column separator. Default is space.</p>
